--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
     "cors": "^2.8.1",
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
+    "express-fileupload": "^0.4.0",
     "helmet": "^3.1.0",
     "jsonwebtoken": "^7.1.0",
     "lodash": "^4.16.4",
     "method-override": "^2.3.6",
     "mongoose": "^4.6.5",
     "morgan": "^1.7.0",
-    "multer": "^1.2.0"
+    "multer": "^1.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
